# FastApi-RestoMenu-API

./: .dockerignore  .env.template  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
app/: main.py
app/api/: handler.py  pagination.py  schemas.py
app/api/v1/categories/: handler.py  schemas.py
app/application/mappers/: category_mapper.py
app/application/services/: category_service.py  services.py
app/domain/entities/: category.py
app/infrastructure/common/repositories/: abstract_category_repository.py
app/infrastructure/repositories/: category_repository.py
app/infrastructure/sqlalchemy_orm/: database.py
app/infrastructure/sqlalchemy_orm/migrations/: env.py
app/infrastructure/sqlalchemy_orm/migrations/versions/: 2024_09_10_1628-443d6ecd848f_category.py
app/infrastructure/sqlalchemy_orm/mixins/: id_mixin.py
app/infrastructure/sqlalchemy_orm/models/: __init__.py  base.py  category.py
app/infrastructure/sqlalchemy_orm/repositories/: category_repository.py
app/presentation/api/: handlers.py
app/presentation/api/v1/: handlers.py
app/presentation/api/v1/categories/: handlers.py  schemas.py
app/settings/: settings.py
docker_compose/: app.yaml  storages.yaml
